# pyterra

./: .gitignore  .gitmodules  .travis.yml  Array.h  CMakeLists.txt  Geom.h  GreedyInsert.cpp  Makefile  Map.cpp  Map.h  Mask.cpp  Mask.h  Quadedge.cpp  Quadedge.h  README.md  Vec3.h  cmdline.cpp  glHacks.h  notes.txt  output.cpp  requirements-dev.txt  setup.py  terra.cpp  terra.h  terra.txt
include/terra/: Array.h  Geom.h  GreedyInsert.h  Heap.h  Map.h  Mask.h  Quadedge.h  Subdivision.h  Vec3.h  Vertex.h  Vertex2.h  Vertex3.h  glHacks.h  gui.h  terra.h  version.h
src/: Array.h  CMakeLists.txt  GreedyInsert.cpp  GreedyInsert.h  Heap.cpp  Heap.h  Map.cpp  Mask.cpp  Quadedge.cpp  Quadedge.h  Subdivision.cpp  Subdivision.h  Vec2.h  Vec3.h  cmdline.cpp  glHacks.cc  greedy.cpp  gui.cc  output.cpp  terra.cpp  xterra.cc
src/pyterra/: GreedyInsert.cpp  GreedyInsert.h  Heap.cpp  Heap.h  Map.cpp  Mask.cpp  Mask.h  Quadedge.cpp  Subdivision.cpp  Subdivision.h  terra.cpp  terra.h
test/: CMakeLists.txt  test_map.cpp  test_settings.h.in  test_test.cpp
tests/: dgm5.tif  pyterra_test.py  test_cpp.py  test_main.cpp  test_terra.cpp
